Bug 574564 - [17] switch label error - pattern rules
Change-Id: Ib9cb67238aac697b38dd6428ed4e1a5fe2ea5f51
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/183214
Tested-by: JDT Bot <jdt-bot@eclipse.org>